Fixed banned champion crosshair filter appearing too big

--- a/ui/src/styles/components/_match.scss
+++ b/ui/src/styles/components/_match.scss
@@ -294,7 +294,7 @@
                 height: 20px;
                 text-align: center;
                 font-weight: 100;
-                font-size: 2em;
+                font-size: 1em;
               }
             }
           }
@@ -550,10 +550,15 @@
         10em repeat(5, auto) 5em repeat(3, 5em)
         5em repeat(3, 2.5em);
     }
+
+    &__teams__team__stats__stat__bans__ban__filter {
+      font-size: 1.3em;
+    }
   }
 
   @media only screen and (max-width: 600px) {
     padding: 1em;
+
     &__player {
       font-size: 1em;
       height: 21em;
